--- a/editors/abiword/Makefile
+++ b/editors/abiword/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.172 2018/04/16 14:33:49 wiz Exp $
+# $NetBSD: Makefile,v 1.173 2018/04/25 05:53:53 markd Exp $
 
 .include 	"Makefile.common"
 DISTNAME=	abiword-${ABIVERSION}
-PKGREVISION=	14
+PKGREVISION=	15
 CATEGORIES=	editors
 MASTER_SITES=	http://www.abiword.com/downloads/abiword/${PKGVERSION_NOREV}/source/
 
