--- a/emulators/qemu/Makefile
+++ b/emulators/qemu/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.183 2018/04/17 20:02:14 gson Exp $
+# $NetBSD: Makefile,v 1.184 2018/04/25 07:56:05 adam Exp $
 
-DISTNAME=	qemu-2.11.1
-PKGREVISION=	3
+DISTNAME=	qemu-2.12.0
 CATEGORIES=	emulators
 MASTER_SITES=	http://download.qemu-project.org/
 EXTRACT_SUFX=	.tar.xz
