--- a/multimedia/Makefile
+++ b/multimedia/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.260 2017/12/19 12:22:19 adam Exp $
+# $NetBSD: Makefile,v 1.261 2018/04/25 21:38:52 kamil Exp $
 #
 
 COMMENT=	Multimedia utilities
@@ -205,7 +205,6 @@ SUBDIR+=	tstools
 SUBDIR+=	tvtime
 SUBDIR+=	ushare
 SUBDIR+=	vlc
-SUBDIR+=	vlc20
 SUBDIR+=	win32-codecs
 SUBDIR+=	x264-devel
 SUBDIR+=	x265
