--- a/misc/kdepimlibs4/Makefile
+++ b/misc/kdepimlibs4/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.81 2018/03/12 11:15:39 wiz Exp $
+# $NetBSD: Makefile,v 1.82 2018/04/26 07:55:21 markd Exp $
 
 DISTNAME=	kdepimlibs-4.14.10
 PKGNAME=	${DISTNAME:S/-4/4-4/}
-PKGREVISION=	9
+PKGREVISION=	10
 CATEGORIES=	misc
 COMMENT=	Support libraries for PIM for the KDE integrated X11 desktop
 MASTER_SITES=	${MASTER_SITE_KDE:=applications/15.04.3/src/}
