--- a/net/Makefile
+++ b/net/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1210 2018/04/14 13:54:46 adam Exp $
+# $NetBSD: Makefile,v 1.1211 2018/04/28 01:17:29 minskim Exp $
 #
 
 COMMENT=	Networking tools
@@ -652,6 +652,7 @@ SUBDIR+=	py-gevent
 SUBDIR+=	py-geventhttpclient
 SUBDIR+=	py-google
 SUBDIR+=	py-google-cloud-sdk
+SUBDIR+=	py-grpcio
 SUBDIR+=	py-gsutil
 SUBDIR+=	py-hatop
 SUBDIR+=	py-hpack
