--- a/inputmethod/ibus/Makefile
+++ b/inputmethod/ibus/Makefile
@@ -1,17 +1,17 @@
-# $NetBSD: Makefile,v 1.52 2018/04/16 14:34:43 wiz Exp $
+# $NetBSD: Makefile,v 1.53 2018/04/28 01:40:07 tsutsui Exp $
 
-PKGREVISION= 4
 .include "Makefile.common"
 
 COMMENT=	Intelligent Input Bus
 
 DEPENDS+=	${PYPKGPREFIX}-gobject3-[0-9]*:../../devel/py-gobject3
 BUILD_DEPENDS+=	cldr-emoji-annotation-[0-9]*:../../textproc/cldr-emoji-annotation
+BUILD_DEPENDS+=	unicode-character-database-[0-9]*:../../textproc/unicode-character-database
 BUILD_DEPENDS+=	unicode-emoji-[0-9]*:../../textproc/unicode-emoji
 
 GNU_CONFIGURE=	yes
 USE_LIBTOOL=	yes
-USE_TOOLS+=	pkg-config intltool msgfmt gmake
+USE_TOOLS+=	pkg-config intltool gmsgfmt gmake
 USE_LANGUAGES=	c c++
 USE_PKGLOCALEDIR=	yes
 
@@ -29,6 +29,7 @@ CONFIGURE_ARGS+=	--enable-introspection=yes
 CONFIGURE_ARGS+=	--with-python=${PYTHONBIN}
 CONFIGURE_ARGS+=	--with-unicode-emoji-dir=${PREFIX}/share/unicode/emoji
 CONFIGURE_ARGS+=	--with-emoji-annotation-dir=${PREFIX}/share/unicode/cldr/common/annotations
+CONFIGURE_ARGS+=	--with-ucd-dir=${PREFIX}/share/unicode/ucd
 
 SUBST_CLASSES+=		dbus
 SUBST_STAGE.dbus=	post-configure
