--- a/fonts/Makefile
+++ b/fonts/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.315 2018/03/13 21:19:52 bsiegert Exp $
+# $NetBSD: Makefile,v 1.316 2018/04/28 09:40:54 wiz Exp $
 #
 
 COMMENT=	Fonts
@@ -828,6 +828,7 @@ SUBDIR+=	vera-ttf
 SUBDIR+=	vfontcap-kochi
 SUBDIR+=	vlgothic-ttf
 SUBDIR+=	watanabe_vfont
+SUBDIR+=	woff2
 SUBDIR+=	xmbdfed
 
 .include "../mk/misc/category.mk"
