--- a/misc/calibre/Makefile
+++ b/misc/calibre/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.200 2018/04/27 14:57:29 wiz Exp $
+# $NetBSD: Makefile,v 1.201 2018/04/28 20:19:10 wiz Exp $
 
 DISTNAME=	calibre-3.22.1
+PKGREVISION=	1
 CATEGORIES=	misc
 #MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=calibre/}
 MASTER_SITES=	http://download.calibre-ebook.com/${PKGVERSION_NOREV}/
