--- a/security/gnutls/Makefile
+++ b/security/gnutls/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.177 2018/04/17 13:28:53 wiz Exp $
+# $NetBSD: Makefile,v 1.178 2018/04/29 04:09:08 dholland Exp $
 
 DISTNAME=	gnutls-3.6.0
 PKGREVISION=	1
@@ -65,6 +65,7 @@ post-install:
 .include "../../converters/libiconv/buildlink3.mk"
 .include "../../devel/autogen/buildlink3.mk"
 .include "../../devel/gettext-lib/buildlink3.mk"
+BUILDLINK_API_DEPENDS.gmp+=		gmp>=5.0   
 .include "../../devel/gmp/buildlink3.mk"
 .include "../../devel/libcfg+/buildlink3.mk"
 # Avoid creating a fake zlib.pc, because if it does
