--- a/lang/spidermonkey52/Makefile
+++ b/lang/spidermonkey52/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2018/04/29 05:11:00 wiz Exp $
+# $NetBSD: Makefile,v 1.2 2018/04/29 05:11:20 wiz Exp $
 
 DISTNAME=	mozjs-52.7.4
 PKGNAME=	${DISTNAME:S/mozjs/spidermonkey52/}
@@ -7,7 +7,7 @@ MASTER_SITES=	https://queue.taskcluster.net/v1/task/YqG2fjJJSTGzGX090FjDYg/runs/
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://developer.mozilla.org/en/SpiderMonkey
+HOMEPAGE=	https://developer.mozilla.org/en-US/docs/Mozilla/Projects/SpiderMonkey/Releases/52
 COMMENT=	Standalone JavaScript implementation in C (major version 52)
 LICENSE=	mpl-2.0
 
