--- a/lang/Makefile
+++ b/lang/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.475 2018/02/03 20:28:28 kamil Exp $
+# $NetBSD: Makefile,v 1.476 2018/04/29 05:11:35 wiz Exp $
 #
 
 COMMENT=	Programming languages
@@ -242,6 +242,7 @@ SUBDIR+=	snobol
 SUBDIR+=	spidermonkey
 SUBDIR+=	spidermonkey17
 SUBDIR+=	spidermonkey185
+SUBDIR+=	spidermonkey52
 SUBDIR+=	spl
 SUBDIR+=	squeak
 SUBDIR+=	squeak-vm
