--- a/security/libtasn1/Makefile
+++ b/security/libtasn1/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.70 2017/08/18 21:53:47 adam Exp $
+# $NetBSD: Makefile,v 1.71 2018/04/29 06:00:39 dholland Exp $
 
 DISTNAME=	libtasn1-4.12
+PKGREVISION=	1
 CATEGORIES=	security devel
 MASTER_SITES=	${MASTER_SITE_GNU:=libtasn1/}
 
