--- a/devel/ruby-gnome2-glib/Makefile
+++ b/devel/ruby-gnome2-glib/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.30 2018/02/21 16:59:59 jperkin Exp $
+# $NetBSD: Makefile,v 1.31 2018/04/29 15:36:44 tsutsui Exp $
 #
 
 DISTNAME=		glib2-${VERSION}
 PKGNAME=		${RUBY_PKGPREFIX}-gnome2-glib-${VERSION}
+PKGREVISION=		1
 COMMENT=		Ruby binding of GLib-2.x
 CATEGORIES=		devel
 
